src/style.css
/* ... */
.submenu .menu-item:hover {
  background: var(--selected-bg);
}

.menu-item.active,
.menu-item:active {
  background: var(--hover-bg);
  box-shadow:
    inset -1px -1px 0 rgba(255, 255, 255, 0.4),
    inset 1px 1px 0 rgba(0, 0, 0, 0.3);
}

.menu-item.sub-active {
  background: var(--selected-bg);
}

.menu-item.focused {
  outline: 1px dotted var(--find-border-color);
  background: var(--selected-bg);
}

.context-menu-separator {
  border-top: 1px solid var(--menu-border-color);
  margin: 0;
  padding: 0 !important;
}

.menu-label {
  flex-grow: 1;
}

.menu-shortcut {
  margin-left: 16px;
  font-size: 0.75rem;
  color: var(--menu-caret-color);
  opacity: 0.8;
}

.menu-item.has-sub::after {
  content: "▶";
  font-size: 0.7rem;
  margin-left: 8px;
  color: var(--menu-caret-color);
}

.menu:not(.submenu) > .menu-item {
  padding: 5px 12px;
}

.menu-item.disabled {
  opacity: 0.4;
  cursor: default;
  pointer-events: none;
}

.menu-item.disabled .menu-label,
.menu-item.disabled .menu-shortcut {
  color: var(--find-placeholder-color);
}

#toolbar {
  max-height: 26px;
  min-height: 0;
  display: flex;
  overflow-x: auto; /* Enables horizontal scrollbar */
  overflow-y: hidden; /* Prevents vertical scrollbar */
  white-space: nowrap;
  justify-content: space-between;
  border-top: 1px solid var(--menu-border-color);
  overscroll-behavior-x: contain;
  touch-action: pan-x;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

#toolbar::-webkit-scrollbar {
  display: none; /* Chrome, Safari and Opera */
}

#at-buttons {
  display: var(--at-buttons-display);
}
#icon-buttons {
  display: flex;
}

.at-button,
.icon-button {
  flex-shrink: 0;
  color: var(--menu-color);
  font-size: 0.875rem;
  padding: 5px 10px;
  background: var(--menu-bg-color);
  overflow: hidden;
  white-space: nowrap;
  position: relative;
  box-shadow:
    inset 1px 1px 0 rgba(255, 255, 255, 0.4),
    inset -1px -1px 0 rgba(0, 0, 0, 0.3);
}

.at-button {
  max-width: 150px;
  text-overflow: ellipsis;
}

.icon-button {
  padding: 5px 7px;
  font-size: 1rem;
}
.icon-button.disabled {
  cursor: default;
  pointer-events: none;
}
.icon-button.disabled span,
.icon-button.disabled::before {
  opacity: 0.4;
}

.at-button::before {
  position: absolute;
}

.at-button.icon-1,
.at-button.icon-2 {
  padding: 5px 10px 5px 22px;
}

.at-button.icon-1::before {
  top: 2px;
  left: 6px;
  content: "⏷";
}

.at-button.icon-2::before {
  top: 4px;
  left: 7px;
  font-size: 1rem;
  content: "+";
}

.at-button:hover,
.icon-button:hover {
  box-shadow:
    inset 1px 1px 0 rgba(255, 255, 255, 0.6),
    inset -1px -1px 0 rgba(0, 0, 0, 0.5);
  background: var(--hover-bg);
}

.at-button:active,
.icon-button:active {
  box-shadow:
    inset -1px -1px 0 rgba(255, 255, 255, 0.4),
    inset 1px 1px 0 rgba(0, 0, 0, 0.3);
  background: var(--hover-bg);
}

/*@+node:felix.20260321142107.1: ** Node Icons*/
.icon0 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/></svg>');
}

.icon1 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/><path d="M9.075 6v5h4.075V6zm1 1h2.076v3h-2.076z" fill="%2342a5f5"/></svg>');
}

.icon2 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M7.074 4.5v8h1v-8z" fill="%23e54a16"/><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/></svg>');
}

.icon3 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none">   <path d="M7.074 4.5v8h1v-8z" fill="%23e54a16"/><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/><path d="M9.075 6v5h4.075V6zm1 1h2.076v3h-2.076z" fill="%2342a5f5"/></svg>');
}

.icon4 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon5 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/><path d="M9.075 6v5h4.075V6zm1 1h2.076v3h-2.076z" fill="%2342a5f5"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon6 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M7.074 4.5v8h1v-8z" fill="%23e54a16"/><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon7 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M7.074 4.5v8h1v-8z" fill="%23e54a16"/><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%234d4d4d"/><path d="M9.075 6v5h4.075V6zm1 1h2.076v3h-2.076z" fill="%2342a5f5"/><path d="M3.56 5.65v2h1v-.279a1.5 1.5 0 11-2.27 1.904l-.923.395A2.5 2.5 0 006.074 8.5a2.5 2.5 0 00-.824-1.85h.31v-1z" fill="%23e54a16"/></svg>');
}

.icon8 {
  background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path d="M0 4v9h15.15V4zm1 1h13.15v7H1z" fill="%23a4a59e"/></svg>');
}
/* ... */

